Fix build and address deprecation warnings